package edu.fiuba.algo3.model.Card.Special;

import edu.fiuba.algo3.model.Board;

public class ScorchedEarth extends Special {

    public ScorchedEarth(String name) {
        super(name);
    }

    @Override
    public void applyInBoard(Board board) {
    }
}